colore scrollbar fix

--- a/client/style.css
+++ b/client/style.css
@@ -93,8 +93,8 @@ body{
     overflow-y: scroll;
     height: 100%;
     scrollbar-width: thin;
-    /* scrollbar-color: var(--color-light-gray) transparent !important; */
-    scrollbar-color: #d3d3d3 transparent !important;
+    scrollbar-color: var(--color-light-gray) transparent !important;
+    /* scrollbar-color: #d3d3d3 transparent !important; */
 }
 
 
